--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section id="about" class="bg-primary">
         <div class="profile-card"><img class="rounded-circle profile-pic" src="assets/img/profile.jpg">
             <h3 class="profile-name" style="background-color: #e4ae21;border: 1px solid white;"><br>Felipe Alves Frozino<br><br></h3>
-            <p class="profile-bio">Coferencista, Pastor e Ministro da Igreja IEQ, Igreja do Evangelho Quadrangular.&nbsp; É especialista em Cultura Judaica e Finanças bíblicas.<br><br></p>
+            <p class="profile-bio">Conferencista, Pastor e Ministro da Igreja IEQ (Igreja do Evangelho Quadrangular).&nbsp; É especialista em Cultura Judaica e Finanças bíblicas.<br><br></p>
             <ul class="social-list">
                 <li> <a href="https://www.facebook.com/phelipealves.frozino">
     <i class="fa fa-facebook-official"></i>
