--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p class="text-faded mb-5 sombra" style="color: #ffffff;"><br />
     Nesse livro serão revelados chaves e enigmas escondidos por trás da história "O endemoninhado gadareno" nas escrituras.  Entenda como Gadara, cidade amaldiçoada, foi transformada depois que jesus pisou os seus pés naquele lugar!<br />
 </p>
-                <div></div><a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="#services">Baixar agora o livro</a></div>
+                <div></div><a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="#services">Baixar o E-book agora</a></div>
         </div>
     </header>
     <section id="about" class="bg-primary">
